--- a/LearningNotes/初探设计模式.md
+++ b/LearningNotes/初探设计模式.md
@@ -19,6 +19,53 @@
 7. 最小知识原则（迪米特法则）:一个模块或对象应尽量少的与其他实体之间发生相互作用，使得系统功能模块相对独立，这样，当一个模块修改时，影响的模块就会越少，拓展起来就会越容易。
 
 
+##有限状态机(Finite-state machine,FSM)
+有限状态机是我们游戏程序中非常常用的一种设计模式。不止游戏，在AI和编译器程序方面很出名。
+
+###为什么引入有限状态机
+一些项目中有很多实体(Entity)，每个实体都有很多状态(State)，各状态会经过不同事件(Event)触发后转换到另一个状态。这些事件包括但不限于：用户页面点击触发，生效时间或失效时间到达，其他依赖实体状态变更等。在状态变更后还会有一系列动作(Action)处理。一旦相互依赖实体或实体本身状态增多，状态转换变多，处理这些状态的业务代码也会分散在各处，代码处理很容易漏掉，维护成本很高。所以考虑引入有限状态机。
+###什么是有限状态机
+有限状态机,也称为FSM(Finite State Machine)，其在任意时刻都处于有限状态集合中的某一状态。当其获得一个输入字符时，将从当前状态转换到另一个状态，或者仍然保持在当前状态。任何一个FSM都可以用状态转换图来描述，图中的节点表示FSM中的一个状态，有向（方向表示从一个初态转换到次态）加权（权表示事件）边表示输入字符时状态的变化。如果图中不存在与当前状态与输入字符对应的有向边，则FSM将进入“消亡状态(Doom State)”，此后FSM将一直保持“消亡状态”。状态转换图中还有两个特殊状态：状态1称为“起始状态”，表示FSM的初始状态。状态6称为“结束状态”。
+
+在启动一个FSM时，首先必须将FSM置于“起始状态”，然后触发一系列时间，最终，FSM会到达“结束状态”或者“消亡状态”。
+
+![](assets/markdown-img-paste-20201125223101982.png)
+
+说明：
+
+在通常的FSM模型中，一般还存在一个“接受状态”，并且FSM可以从“接受状态”转换到另一个状态，只有在识别最后一个字符后，才会根据最终状态来决定是否接受所输入的字符串。此外，也可以将“其实状态”也作为接受状态，因此空的输入序列也是可以接受的。
+
+1. 状态机要素:4个要素，即现态、条件、动作、次态。“现态”和“条件”是因，“动作”和“次态”是果。
+- 现态：是指当前所处的状态。
+- 条件：又称为“事件”。当一个条件被满足，将会触发一个动作，或者执行一次状态的迁移。
+- 动作：条件满足后执行的动作。动作执行完毕后，可以迁移到新的状态，也可以仍旧保持原状态。动作不是必需的，当条件满足后，也可以不执行任何动作，直接迁移到新状态。
+- 次态：条件满足后要迁往的新状态。“次态”是相对于“现态”而言的，“次态”一旦被激活，就转变成新的“现态”了。
+
+我们可以用状态表了表示整个过程，如下图所示。
+![](assets/markdown-img-paste-20201125223934988.png)
+
+###FSM逻辑与数学模型
+FSM的下一个状态和输出是由输入和当前状态决定的。
+
+依据类型不同有多种定义。接受器有限状态机是五元组 ${\displaystyle (\Sigma ,S,s_{0},\delta ,F)}$ ，这里的：
+
+1. ${\displaystyle \Sigma }$ 是输入字母表（符号的非空有限集合）。
+2. ${\displaystyle S}$ 是状态的非空有限集合。
+3. ${\displaystyle s_{0}}$ 是初始状态，它是{\displaystyle S}S的元素。在非确定有限状态自动机中，${\displaystyle s_{0}}$ 是初始状态的集合。
+4. ${\displaystyle \delta }$ 是状态转移函数：${\displaystyle \delta :S\times \Sigma \rightarrow S}$。
+5. ${\displaystyle F}$ 是最终状态的集合，${\displaystyle S}$ 的（可能为空）子集。
+
+变换器有限状态自动机是六元组 ${\displaystyle (\Sigma ,\Gamma ,S,s_{0},\delta ,\omega )}$，这里的：
+1. ${\displaystyle \Sigma }$ 是输入字母表（符号的非空有限集合）。
+2. ${\displaystyle \Gamma }$ 是输出字母表（符号的非空有限集合）。
+3. ${\displaystyle S}$ 是状态的非空有限集合。
+4. ${\displaystyle s_{0}}$ 是初始状态，它是${\displaystyle S}$ 的元素。在非确定有限状态自动机中，${\displaystyle s_{0}}$ 是初始状态的集合。
+5. ${\displaystyle \delta }$ 是状态转移函数：${\displaystyle \delta :S\times \Sigma \rightarrow S}$。
+6. ${\displaystyle \omega }$ 是输出函数。
+7. 如果输出函数是状态和输入字母表的函数（${\displaystyle \omega :S\times \Sigma \rightarrow \Gamma }$），则定义对应于Mealy模型，它可以建模为Mealy机。如果输出函数只依赖于状态 (${\displaystyle \omega :S\rightarrow \Gamma }$），则定义对应于Moore模型，它可建模为Moore机。根本没有输出函数的有限状态机叫做半自动机或转移系统。
+
+
+
 ##Java的23种设计模式
 
 ###工厂方法模式
