--- a/LearningNotes/数据库汇总.md
+++ b/LearningNotes/数据库汇总.md
@@ -2039,8 +2039,9 @@ localhost:6379> select 3
 OK
 localhost:6379[3]>
 ```
-
+存放键值: set key value
 查看数据库中所有的键值
+获取键值
 ```
 localhost:6379[1]> set a 1
 OK
@@ -2049,6 +2050,8 @@ OK
 localhost:6379[1]> keys *
 1) "b"
 2) "a"
+localhost:6379[1]> get a
+1
 ```
 返回当前数据库中所有key的数目: dbsize
 
@@ -2067,3 +2070,239 @@ OK
 localhost:6379> get z
 "sss"
 ```
+
+删除键:del key1[key2...]
+```
+localhost:6379[1]> del java javastack
+(integer) 1
+```
+
+查询键类型:type key
+```
+localhost:6379[1]> type javastack
+string
+```
+
+查询key的生命周期(秒): ttl key, -1表示永远不过期
+```
+localhost:6379[1]> ttl javastack
+(integer) -1
+```
+
+查询key的生命周期(毫秒): pttl key, -1表示永远不过期
+```
+localhost:6379[1]> pttl javastack
+(integer) -1
+```
+
+设置过期时间:
+- 秒级语法: expire key seconds
+- 毫秒级语法: pexpire key milliseconds
+```
+localhost:6379[1]>expire javastack 60
+(integer) 1
+localhost:6379[1]>ttl javastack
+(integer) 55
+```
+
+设置永不过期：persist key
+```
+localhost:6379[1]> persist javastack
+(integer) 1
+```
+
+更改键名称:rename key newkey
+```
+localhost:6379[1]> rename javastack javastack123
+OK
+```
+
+#####字符串操作命令
+字符串是Redis中最基本的数据类型，单个数据能存储的最大空间是512M。
+
+
+存放键值:set key value
+```
+localhost:6379[1]> set javastack 666
+OK
+```
+
+获取键值:get key
+```
+localhost:6379[1]> get javastack
+"666"
+```
+
+值递增/递减：incr key
+```
+localhost:6379[1]> incr javastack
+(integer) 667
+```
+
+批量存放键值:mset key1 value1[key2 value2...]
+```
+localhost:6379[1]> mset java1 1 java2 2 java3 3
+OK
+```
+
+批量获取键值:mget key1[key2...]
+```
+localhost:6379[1]> mget java1 java2
+1) "1"
+2) "2"
+```
+Redis接收的是UTF-8的编码，如果是中文一个汉字将占3位返回。
+
+
+
+获取值长度:strlen key
+```
+localhost:6379[1]> strlen javastack
+(integer) 3
+```
+
+追加内容:append key value
+```
+localhost:6379[1]> append javastack hi
+(integer) 5
+```
+向键值尾部添加，如上命令执行后由666变成666hi
+
+获取部分字符:getrange key start end
+```
+localhost:6379[1]> getrange javastack 0 4
+"javas"
+```
+
+#####集合操作命令
+集合类型和列表类型相似，只不过是集合是无序且不可重复的。
+
+存储值:sadd key member [member ...]
+```
+localhost:6379[1]> sadd langs java php c++ go ruby python kotlin java
+(integer) 7
+```
+
+获取所有元素:smembers key
+```
+localhost:6379[1]> smembers langs
+1) "php"
+2) "kotlin"
+3) "c++"
+4) "go"
+5) "ruby"
+6) "python"
+7) "java"
+```
+
+随机获取：srandmember langs count
+```
+localhost:6379[1]> srandmember langs 3
+1) "c++"
+2) "java"
+3) "php"
+```
+
+判断集合是否存在元素:sismember key member
+```
+localhost:6379[1]> sismember langs go
+(integer) 1
+```
+
+获取集合元素个数:scard key
+```
+localhost:6379[1]>scard langs
+(integer) 7
+```
+
+删除集合元素:srem key member [member ...]
+```
+localhost:6379[1]> srem langs ruby kotlin
+(integer) 2
+```
+
+
+弹出元素:spop key [count]
+```
+localhost:6379[1]> spop langs 2
+1) "go"
+2) "java"
+```
+
+
+#####有序集合
+和列表的区别：
+1. 列表使用链表实现，两头快，中间慢。有序集合是散列表和跳跃表实现的，即使读取中间的元素也比较快。
+2. 列表不能调整元素位置，有序集合能。
+3. 有序集合比列表更占内存。
+
+存储值:zadd key [NX|XX] [CH] [INCR] score member [score member ...]
+```
+localhost:6379[1]> zadd footCounts 16011 tid 20082 huny 2893 nosy
+(integer) 3
+```
+
+获取元素分数:zscore key member
+```
+localhost:6379[1]> zscore footCounts tid
+"16011"
+```
+
+
+获取排名范围排名语法：zrange key start stop [WITHSCORES]
+```
+// 获取所有，没有分数
+localhost:6379[1]> zrange footCounts 0 -1
+1) "nosy"
+2) "tid"
+3) "huny"
+
+// 获取所有及分数
+localhost:6379[1]> zrange footCounts 0 -1 Withscores
+1) "nosy"
+2) "2893"
+3) "tid"
+4) "16011"
+5) "huny"
+6) "20082"
+```
+
+获取指定分数范围排名语法：zrangebyscore key min max [WITHSCORES] [LIMIT offset count]
+```
+localhost:6379[1]> zrangebyscore footCounts 3000 30000 withscores limit 0 1
+1) "tid"
+2) "16011"
+```
+
+增加指定元素分数:zincrby key increment member
+```
+localhost:6379[1]> zincrby footCounts 2000 tid
+"18011"
+```
+
+获取集合元素个数:zcard key
+```
+localhost:6379[1]> zcount footCounts 2000 20000
+(integer) 2
+```
+
+获取指定范围分数个数:zcount key min max
+```
+localhost:6379[1]> zcount footCounts 2000 20000
+(integer) 2
+```
+
+删除指定元素:zrem key member[member...]
+```
+localhost:6379[1]> zrem footCounts huny
+(integer) 1
+```
+
+获取元素排名:zrank key member
+```
+localhost:6379[1]> zrank footCounts tid
+(integer) 1
+```
+
+#####列表操作命令
+https://www.cnblogs.com/javastack/p/9854489.html
